# SD_MIREA

AlgHash/: CMakeLists.txt  report_bruteforce.docx
AlgHash/src/: main.cpp
AlgHash/src/core/: Argon2Service.cpp  Argon2Service.hpp  MD5Service.cpp  MD5Service.hpp  SHA-1Service.cpp  SHA-1Service.hpp  bcryptService.cpp  bcryptService.hpp  hashService.hpp
AlgHash/src/qt/: mainwindow.cpp  mainwindow.hpp
Application_File/: CMakeLists.txt  resources.qrc
Application_File/models/: Auth.cpp  Auth.h  Database.cpp  Database.h  Files.cpp  Files.h  Operations.cpp  Operations.h
Application_File/models/scripts/: files.sql  logger.sql  login.sql
Application_File/src/: main.cpp
Application_File/src/adapter/linux/: linuxDiskService.cpp  linuxDiskService.h
Application_File/src/adapter/qt/: qtCheckPathService.cpp  qtCheckPathService.h  qtCheckPathZIPService.cpp  qtCheckPathZIPService.h  qtContentZIPService.cpp  qtContentZIPService.h  qtCreateFileService.cpp  qtCreateFileService.h  qtDeserialJsonXMLService.cpp  qtDeserialJsonXMLService.h  qtDiskService.cpp  qtDiskService.h  qtEditFileService.cpp  qtEditFileService.h  qtEditZIPService.cpp  qtEditZIPService.h  qtExtractZIPService.cpp  qtExtractZIPService.h  qtReadFileService.cpp  qtReadFileService.h  qtRemoveFileService.cpp  qtRemoveFileService.h
Application_File/src/core/: STDCreateZIPService.cpp  STDCreateZIPService.h  checkPath.h  checkPathService.h  checkPathZIP.h  checkPathZIPService.h  contentZIP.h  contentZIPService.h  createFileService.h  createZIPService.h  deserialJsonXMLService.h  diskInfo.h  diskService.h  editFileService.h  editZIPService.h  extractZIPService.h  readFileService.h  removeFileService.h
Application_File/src/qt/: diskinfowindow.cpp  diskinfowindow.h  jsonwindow.cpp  jsonwindow.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  txtwindow.cpp  txtwindow.h  xmlwindow.cpp  xmlwindow.h  zipwindow.cpp  zipwindow.h
Bruteforce/: README.md  bruteforce.py  guaidDefend.md  passwords.txt  testDefend.sh
Bruteforce/code_review/: new.php  old.php  report_form_cwe.docx
Bruteforce/myDefend/: bruteforceOnDefend.py  defend.py  passwordsDefend.txt
